Wrote the entirety of the README